udpate CMakeLists.txt - set cuda architectures

--- a/cv/CMakeLists.txt
+++ b/cv/CMakeLists.txt
@@ -1,4 +1,5 @@
 cmake_minimum_required(VERSION 2.8)
+set(CMAKE_CUDA_ARCHITECTURES 60 61 62 70 72 75 86)
 project( DisplayImage )
 find_package( OpenCV REQUIRED )
 include_directories( ${OpenCV_INCLUDE_DIRS} )
